--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "builder-challenge",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "keywords": [
-    "react",
-    "expo",
-    "template",
-    "typescript",
-    "nativebase"
-  ],
-  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,28 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~42.0.0",
-    "expo-status-bar": "~1.0.4",
-    "native-base": "3.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
-  "bugs": {
-    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
-  },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
   "private": true
 }
