--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "test": "jest",
     "prepare": "husky install"
   },
   "dependencies": {
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "jest": "^26.6.3",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -24,6 +26,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.0.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
@@ -35,9 +40,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
+    "jest-expo": "^44.0.1",
     "lint-staged": "^12.1.4",
     "prettier": "2.5.1",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   },
   "lint-staged": {
     "src/**/*": [
