--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "builder-challenge",
-    "slug": "builder-challenge",
+    "name": "b-weather",
+    "slug": "b-weather",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
