--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "builder-challenge",
+  "name": "b-weather",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
