--- a/.github/workflow/deploy_staging.yml
+++ b/.github/workflow/deploy_staging.yml
@@ -1,9 +1,6 @@
 name: Expo store Deploy on the staging release
 
-on:
-  push:
-    branches:
-      - develop
+on: [pull_request]
 
 jobs:
   publish-on-staging:
@@ -26,4 +23,15 @@ jobs:
         run: yarn install
 
       - name: Publish
-        run: expo publish --release-channel staging --non-interactive
+        run: expo publish --release-channel pr-${{ github.event.number }} --non-interactive
+
+      - name: Add Comment To PR
+        uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EXPO_PROJECT: "@henry-ns/b-weather"
+        with:
+          message: |
+            ## Application
+            ![Expo QR](https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=exp://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }})
+            Published to https://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }}
