fix: rename workflow folder to workflows

--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -1,7 +1,12 @@
 name: Check Lint and tests
 
-on: [pull_request]
-
+on:
+  pull_request:
+    branches:
+      - '*'
+  push:
+    branches:
+      - main
 jobs:
   test:
     name: Lint & Test
