--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,9 +1,12 @@
-name: Expo store Deploy on the staging release
+name: Deploy on the default release of the expo store
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  publish-on-staging:
+  publish-on-production:
     name: Install and publish
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +26,7 @@ jobs:
         run: yarn install
 
       - name: Publish
-        run: expo publish --release-channel pr-${{ github.event.number }} --non-interactive
+        run: expo publish --non-interactive
 
       - name: Add Comment To PR
         uses: mshick/add-pr-comment@v1
@@ -33,5 +36,5 @@ jobs:
         with:
           message: |
             ## Application
-            ![Expo QR](https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=exp://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }})
-            Published to https://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }}
+            ![Expo QR](https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=exp://exp.host/${{ env.EXPO_PROJECT }}?release-channel=default
+            Published to https://exp.host/${{ env.EXPO_PROJECT }}?release-channel=default
