--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -1,12 +1,9 @@
-name: Expo store Deploy on the default release
+name: Deploy on the staging release of the expo store
 
-on:
-  push:
-    branches:
-      - develop
+on: [pull_request]
 
 jobs:
-  publish-on-production:
+  publish-on-staging:
     name: Install and publish
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +23,7 @@ jobs:
         run: yarn install
 
       - name: Publish
-        run: expo publish --non-interactive
+        run: expo publish --release-channel pr-${{ github.event.number }} --non-interactive
 
       - name: Add Comment To PR
         uses: mshick/add-pr-comment@v1
@@ -36,5 +33,5 @@ jobs:
         with:
           message: |
             ## Application
-            ![Expo QR](https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=exp://exp.host/${{ env.EXPO_PROJECT }}?release-channel=default
-            Published to https://exp.host/${{ env.EXPO_PROJECT }}?release-channel=default
+            ![Expo QR](https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=exp://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }})
+            Published to https://exp.host/${{ env.EXPO_PROJECT }}?release-channel=pr-${{ github.event.number }}
