chore: config default font to lato

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
   },
   "plugins": ["react", "@typescript-eslint", "import-helpers"],
   "rules": {
+    "camelcase": "off",
+
     "import-helpers/order-imports": [
       "warn",
       {
