--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "jest": "^26.6.3",
     "native-base": "^3.2.2",
