--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest",
+    "test": "DISABLE_MOCKED_WARNING=true jest",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -21,7 +21,6 @@
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
-    "jest": "^26.6.3",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -47,15 +46,23 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
+    "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
     "lint-staged": "^12.1.4",
     "prettier": "2.5.1",
+    "ts-jest": "^27.1.2",
     "typescript": "~4.3.5"
   },
   "jest": {
     "preset": "jest-expo",
     "setupFilesAfterEnv": [
       "@testing-library/jest-native/extend-expect"
+    ],
+    "setupFiles": [
+      "./jest/setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!native-base)/"
     ]
   },
   "lint-staged": {
