--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "DISABLE_MOCKED_WARNING=true jest",
+    "test:w": "DISABLE_MOCKED_WARNING=true jest --watchAll",
+    "test:c": "DISABLE_MOCKED_WARNING=true jest --coverage",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -52,15 +54,6 @@
     "prettier": "2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "~4.3.5"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-native/extend-expect"
-    ],
-    "setupFiles": [
-      "./jest/setup.js"
-    ]
   },
   "lint-staged": {
     "src/**/*": [
