--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo-google-fonts/lato": "^0.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.0",
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -36,6 +38,7 @@
     "@babel/core": "^7.12.9",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.0.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
