--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
