--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Create env file
+        run: |
+          touch .env
+          echo OPEN_WEATHER_MAP_API_KEY=${{ secrets.OPEN_WEATHER_MAP_API_KEY }} >> .env
+          cat .env
+
       - name: Publish
         run: expo publish --release-channel pr-${{ github.event.number }} --non-interactive
 
